--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -240,6 +240,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="DAL\" />
+    <Folder Include="Models\models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
