--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Models\models\Answer.cs" />
     <Compile Include="Models\models\Content.cs" />
     <Compile Include="Models\models\Poll.cs" />
+    <Compile Include="Models\models\Rule.cs" />
     <Compile Include="Models\models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
