Adventure model added

--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -177,6 +177,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\models\Adventure.cs" />
     <Compile Include="Models\models\Answer.cs" />
     <Compile Include="Models\models\Content.cs" />
     <Compile Include="Models\models\Poll.cs" />
