Concept model added

--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -179,6 +179,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\models\Adventure.cs" />
     <Compile Include="Models\models\Answer.cs" />
+    <Compile Include="Models\models\Concept.cs" />
     <Compile Include="Models\models\Content.cs" />
     <Compile Include="Models\models\EI.cs" />
     <Compile Include="Models\models\Equipment.cs" />
