--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -193,6 +193,7 @@
     <Compile Include="Models\models\Spell.cs" />
     <Compile Include="Models\models\SS.cs" />
     <Compile Include="Models\models\User.cs" />
+    <Compile Include="Models\models\Weapon.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
