--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Models\models\Hero.cs" />
     <Compile Include="Models\models\HL.cs" />
     <Compile Include="Models\models\Item.cs" />
+    <Compile Include="Models\models\Other.cs" />
     <Compile Include="Models\models\Poll.cs" />
     <Compile Include="Models\models\Rule.cs" />
     <Compile Include="Models\models\Spell.cs" />
