--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -181,6 +181,7 @@
     <Compile Include="Models\models\Answer.cs" />
     <Compile Include="Models\models\Armor.cs" />
     <Compile Include="Models\models\Attribute.cs" />
+    <Compile Include="Models\models\Class.cs" />
     <Compile Include="Models\models\Concept.cs" />
     <Compile Include="Models\models\Content.cs" />
     <Compile Include="Models\models\EI.cs" />
