--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Models\models\Class.cs" />
     <Compile Include="Models\models\Concept.cs" />
     <Compile Include="Models\models\Content.cs" />
+    <Compile Include="Models\models\CW.cs" />
     <Compile Include="Models\models\EI.cs" />
     <Compile Include="Models\models\Equipment.cs" />
     <Compile Include="Models\models\HA.cs" />
