--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -189,6 +189,7 @@
     <Compile Include="Models\models\CW.cs" />
     <Compile Include="Models\models\EI.cs" />
     <Compile Include="Models\models\Equipment.cs" />
+    <Compile Include="Models\models\Fistcaster.cs" />
     <Compile Include="Models\models\HA.cs" />
     <Compile Include="Models\models\HC.cs" />
     <Compile Include="Models\models\Hero.cs" />
