--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Models\models\HL.cs" />
     <Compile Include="Models\models\Item.cs" />
     <Compile Include="Models\models\Label.cs" />
+    <Compile Include="Models\models\Monster.cs" />
     <Compile Include="Models\models\Other.cs" />
     <Compile Include="Models\models\Poll.cs" />
     <Compile Include="Models\models\Rule.cs" />
