--- a/OHET_Project/OHET_Project/Web.config
+++ b/OHET_Project/OHET_Project/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-OHET_Project-20180427111458.mdf;Initial Catalog=aspnet-OHET_Project-20180427111458;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+  <!--  <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-OHET_Project-20180427111458.mdf;Initial Catalog=aspnet-OHET_Project-20180427111458;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=db-mssql;Initial Catalog=s13809;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
