Character-Sheet: [NEED WORK] Added controller for choosing starting item in creating Character-Sheet.
Added to item model attribute isStarting, which determinate starting items for heroes.
This change is not migrated so it needs some work.
Whole commit is not tested, cause of coding without internet connection.

btw. why the hell r u reading that? Go back and just play Persona.

--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -301,6 +301,7 @@
     <Content Include="Views\Items\Edit.cshtml" />
     <Content Include="Views\Items\Index.cshtml" />
     <Content Include="Views\Heroes\_createConceptData.cshtml" />
+    <Content Include="Views\Heroes\_createItemChoice.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
