--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -171,14 +171,13 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HeroesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ItemsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201809021445163_IniNew01.cs" />
-    <Compile Include="Migrations\201809021445163_IniNew01.Designer.cs">
-      <DependentUpon>201809021445163_IniNew01.cs</DependentUpon>
+    <Compile Include="Migrations\201810121858426_InitialD.cs" />
+    <Compile Include="Migrations\201810121858426_InitialD.Designer.cs">
+      <DependentUpon>201810121858426_InitialD.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -186,22 +185,15 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\models\Ability.cs" />
     <Compile Include="Models\models\Adventure.cs" />
-    <Compile Include="Models\models\Armor.cs" />
-    <Compile Include="Models\models\Attribute.cs" />
+    <Compile Include="Models\models\AttributeLvl.cs" />
     <Compile Include="Models\models\Class.cs" />
-    <Compile Include="Models\models\Concept.cs" />
     <Compile Include="Models\models\Content.cs" />
-    <Compile Include="Models\models\Equipment.cs" />
     <Compile Include="Models\models\Fistcaster.cs" />
     <Compile Include="Models\models\Hero.cs" />
-    <Compile Include="Models\models\Item.cs" />
-    <Compile Include="Models\models\Label.cs" />
     <Compile Include="Models\models\Monster.cs" />
-    <Compile Include="Models\models\Other.cs" />
     <Compile Include="Models\models\Rule.cs" />
     <Compile Include="Models\models\Spell.cs" />
     <Compile Include="Models\models\Spellcaster.cs" />
-    <Compile Include="Models\models\Weapon.cs" />
     <Compile Include="Persistence\DbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -314,8 +306,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201809021445163_IniNew01.resx">
-      <DependentUpon>201809021445163_IniNew01.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201810121858426_InitialD.resx">
+      <DependentUpon>201810121858426_InitialD.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
