--- a/OHET_Project/OHET_Project/OHET_Project.csproj
+++ b/OHET_Project/OHET_Project/OHET_Project.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Models\models\Spell.cs" />
     <Compile Include="Models\models\Spellcaster.cs" />
     <Compile Include="Models\models\Subpost.cs" />
+    <Compile Include="Models\ViewModel\ContentViewModel.cs" />
     <Compile Include="Persistence\DbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
